# jauqpy

./: .gitignore  Makefile  README.md  cookiecutter.json  pyproject.toml
{{ cookiecutter.import_name }}/: .env-example  .gitignore  .mypy.ini  .pylintrc  Dockerfile.base  Dockerfile.beat  Dockerfile.celery  Dockerfile.django  Makefile  README.md  conftest.py  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  verchew.ini
{{ cookiecutter.import_name }}/{{ cookiecutter.import_name }}/api/: urls.py
{{ cookiecutter.import_name }}/{{ cookiecutter.import_name }}/api/templates/admin/: change_form.html
{{ cookiecutter.import_name }}/{{ cookiecutter.import_name }}/base/: admin.py  apps.py  managers.py  mixins.py  urls.py  views.py
{{ cookiecutter.import_name }}/{{ cookiecutter.import_name }}/settings/: default.py  production.py  test.py  {{ cookiecutter.import_name }}.py
{{ cookiecutter.import_name }}/{{ cookiecutter.import_name }}/{{ cookiecutter.app }}/: admin.py  apps.py  constants.py  models.py  tasks.py  views.py
{{ cookiecutter.import_name }}/{{ cookiecutter.import_name }}/{{ cookiecutter.app }}/tests/: test_interface.py  test_utils.py  test_views.py
{{ cookiecutter.project_name }}/: .env-example  .gitignore  Makefile  docker-compose.yml  pyproject.toml  pytest.ini  verchew.ini
{{ cookiecutter.project_name }}/{{ cookiecutter.import_name }}/api/: urls.py  wsgi.py
{{ cookiecutter.project_name }}/{{ cookiecutter.import_name }}/base/: admin.py  apps.py  managers.py  mixins.py  querysets.py
{{ cookiecutter.project_name }}/{{ cookiecutter.import_name }}/settings/: default.py  dev.py  test.py  {{ cookiecutter.import_name }}.py
