[tool.poetry]
name = "jauqpy"
version = "0.1.0"
description = "Jauquet Python Template"
package-mode = false
authors = ["Rob Ervin Jauquet <rob@jauqshop.com>"]

[tool.poetry.dependencies]
python = "^3.8"
cookiecutter = "^1.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
